# IRFXLib

./: .gitignore  CMakeLists.txt  README.md
docs/: CMakeLists.txt
examples/: CMakeLists.txt  example.cpp  lecture1.cpp  lecture2.cpp  lecture3.cpp  lecture4.cpp  lecture5.cpp  ql.cpp  ql.h
include/IRFXLib/: BSModel01.h  BSModel02.h  BSModelEigen.h  BinLattice02.h  BinModel01.h  BinModel02.h  CVEurBasketCall.h  DoubleDigitalPayoff.h  EurCall.h  GmtrAsianCall.h  Option06.h  Options03.h  Options04.h  Options09.h  PathDependentOption01.h  PathDependentOption05.h  Test.cpp  Test.h  matrix.h  utils.h
src/: BSModel01.cpp  BSModel02.cpp  BSModelEigen.cpp  BinModel01.cpp  BinModel02.cpp  CMakeLists.txt  CVEurBasketCall.cpp  DoubleDigitalPayoff.cpp  EurCall.cpp  GmtrAsianCall.cpp  Option06.cpp  Options03.cpp  Options09.cpp  PathDependentOption01.cpp  PathDependentOption05.cpp  matrix.cpp
tests/: CMakeLists.txt  catch_config.cpp  test_Lecture1.cpp
